created new abstract component for form view, updated a bit logic of sign in(up) components

--- a/src/app/components/root/root.component.html
+++ b/src/app/components/root/root.component.html
@@ -2,8 +2,7 @@
     <nav>
         <ul>
             <ng-container>
-                <li><a routerLink="/user/signin" class="nav-link">Sign in</a></li>
-                <li><a routerLink="/user/signup" class="nav-link">Sign up</a></li>
+                <li><a href="#" (click)="logout()" class="nav-link">Log out</a></li>
                 <li><a routerLink="/" class="nav-link">Landing</a></li>
             </ng-container>
         </ul>
