--- a/src/app/components/root/root.component.less
+++ b/src/app/components/root/root.component.less
@@ -14,7 +14,7 @@ header {
 main {
     flex: 1;
     display: flex;
-    align-items: center;
+    //align-items: center;
     justify-content: center;
 }
 
