--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -4,11 +4,13 @@
 <table>
     <thead>
         <tr>
+            <th>№</th>
             <th *ngFor="let col of config">{{col.colname}}</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let item of userList">
+        <tr *ngFor="let item of userList; let i = index">
+            <td>{{i + 1}}</td>
             <td *ngFor="let col of config">
                 <ng-container [ngSwitch]="col.type">
                     <ng-template ngSwitchCase="datetime">{{ item[col.colname] | date: 'short' }} </ng-template>
