--- a/src/app/components/root/root.component.less
+++ b/src/app/components/root/root.component.less
@@ -6,20 +6,18 @@
 
 header {
     height: 50px;
-    width: 100%;
     display: flex;
     align-items: center;
+    flex: 0 0 50px;
 }
 
 main {
     flex: 1;
     display: flex;
-    //align-items: center;
-    justify-content: center;
 }
 
 nav {
-    width: 100%;
+    flex: 1;
 
     ul {
         display: flex;
