--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,8 +1,13 @@
-<h3>
+<h1>
     User list
-</h3>
+</h1>
 
 <table *ngIf="userList$ | async as users">
+    <colgroup>
+        <col style="width: 20px;">
+        <col *ngFor="let col of config" [style]="{width: col.width}">
+        <col style="width: 160px">
+    </colgroup>
     <thead>
         <tr>
             <th>№</th>
@@ -16,39 +21,30 @@
             <td *ngFor="let col of config">
                 <ng-container [ngSwitch]="col.type">
                     <ng-template ngSwitchCase="datetime">{{ user[col.colname] | date: 'short' }} </ng-template>
-                    <ng-template ngSwitchCase="role">{{ user[col.colname].title }} </ng-template>
+                    <ng-template ngSwitchCase="role">
+                        <span [ngClass]="'role-' + user['role'].title">
+                            {{ user[col.colname].title }}
+                        </span>
+                    </ng-template>
                     <ng-template ngSwitchDefault>{{ user[col.colname] }}</ng-template>
                 </ng-container>
             </td>
             <td>
-                <button class="btn-outline" (click)="updatePrivileges(user)">Update privileges</button>
+                <button class="btn btn--primary-outline btn--sm" (click)="updatePrivileges(user)">Update
+                    privileges</button>
             </td>
         </tr>
     </tbody>
 </table>
 
 <app-modal>
-    <h4>Update privilege</h4>
-    <form class="form" [formGroup]="privilegeForm">
+    <h3>Update user role</h3>
+    <div class="subheader">
+        for {{user.username}}
+    </div>
 
-        <div class="form__field">
-            user:
-            <select name="users" id="users" formControlName="users">
-                <ng-container *ngFor="let col of userList$ | async">
-                    <option [value]="col.username">{{ col.username }}</option>
-                </ng-container>
-            </select>
-        </div>
+    <app-dropdown [defaultItem]="user.role" [list]="roles$" (onSubmitEvent)="onSubmit($event)"></app-dropdown>
 
-        <div class="form__field">
-            role:
-            <select name="roles" id="roles" formControlName="roles">
-                <ng-container *ngFor="let role of roles$ | async">
-                    <option [value]="role._id">{{role.title}}</option>
-                </ng-container>
-            </select>
-        </div>
+    <button class="btn btn--sm btn--primary mt-12" #submit type="submit" (click)="update()">Update</button>
 
-        <button class="btn mt-12" #submit type="submit" (click)="update()">Update</button>
-    </form>
 </app-modal>
