--- a/src/app/components/helper/modal/modal.component.html
+++ b/src/app/components/helper/modal/modal.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="display$ | async as display">
-    <section [class.open]="display !== 'close'" (click)="close()">
-        <div (click)="$event.stopPropagation()">
+    <section [class.open]="display !== 'close'" (click)="handleClick($event)">
+        <div>
             <button class="close" type="button" (click)="close()">X</button>
             <ng-content></ng-content>
         </div>
