--- a/src/app/components/helper/modal/modal.component.less
+++ b/src/app/components/helper/modal/modal.component.less
@@ -24,11 +24,10 @@ section {
     left: 50%;
     transform: translate(-50%, -50%);
 
-    height: 200px;
     width: 300px;
 
     background: var(--darkest-color);
-    padding: 35px;
+    padding: 20px 36px;
 
     border-radius: 8px;
 
@@ -41,11 +40,17 @@ section {
     border: none;
     cursor: pointer;
     outline: none;
+    font-size: 14px;
+    line-height: 20px;
 
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 10px;
+    right: 10px;
 
-    padding: 12px 16px;
+    padding: 4px 10px;
+
+    &:hover {
+      color: var(--accent-color);
+    }
   }
 }
