--- a/src/app/components/helper/sign-form/sign-form.component.html
+++ b/src/app/components/helper/sign-form/sign-form.component.html
@@ -11,11 +11,11 @@
         </div>
     </ng-container>
 
-    <button class="btn mt-12" #submit type="submit" (click)="onSubmit()">{{form.form_name}}</button>
+    <button class="btn btn--primary mt-12" #submit type="submit" (click)="onSubmit()">{{form.form_name}}</button>
 </form>
 
 <div class="description">
     <h3 class="form__heading">{{form.description_heading}}</h3>
     <p>{{form.description_text}}</p>
-    <a [routerLink]="form.description_btn.route" class="btn--outline mt-12" [attr.data-testid]="'link'"> {{form.description_btn.text}}</a>
+    <a [routerLink]="form.description_btn.route" class="link-primary mt-12" [attr.data-testid]="'link'"> {{form.description_btn.text}}  <app-svg-icon icon="forward"></app-svg-icon></a>
 </div>
