--- a/src/app/components/root/root.component.html
+++ b/src/app/components/root/root.component.html
@@ -2,7 +2,7 @@
     <nav>
         <ul>
             <ng-container *ngIf="user">
-                <li><a routerLink="/home" class="nav-link">Workspace</a></li>
+                <li><a routerLink="/workspace" class="nav-link">Workspace</a></li>
                 <li><a routerLink="/user-list" class="nav-link">User list</a></li>
                 <!-- <li><a routerLink="/profile" class="nav-link"> {{user}} profile</a></li> -->
                 <li><a href="/" (click)="logout()" class="nav-link">Log out</a></li>
