--- a/src/styles.less
+++ b/src/styles.less
@@ -6,7 +6,9 @@
 @darkest-color: #2F4858;
 @red: #DA0037;
 @accent: #F69333;
-
+//text 9ABDD1
+//9BBED2 ligth btn outline  7AB4D2
+//#9A7BA0 fanny
 html {
     --font-primary: 'Varela Round', sans-serif;
     --font-secondary: 'Comfortaa', cursive;
@@ -20,6 +22,7 @@ html {
     --darkest-color: @darkest-color;
     --red-color: @red;
     --accent-color: @accent;
+    --accent-color-70: fade(@accent, 70%);
 }
 
 * {
@@ -42,4 +45,165 @@ body {
     max-width: var(--container-width);
     margin: auto;
     width: 100%;
+}
+
+h1,
+h2,
+h3 {
+    color: var(--lightest-color);
+    color: var(--accent-color);
+}
+
+h1 {
+    margin-top: 0;
+}
+
+h3 {
+    margin: 0;
+    margin-bottom: 12px;
+    font-size: 22px;
+    line-height: 28px;
+}
+
+.btn {
+    padding: 8px 12px;
+    font-size: 14px;
+    line-height: 20px;
+    width: 100%;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: var(--font-primary);
+    border-radius: 4px;
+
+    &[disabled] {
+        opacity: .5;
+        cursor: not-allowed;
+    }
+
+    &--primary {
+        background: var(--primary-color);
+        border: 2px solid var(--primary-color);
+        color: var(--lightest-color);
+  
+        &:hover {
+            background: var(--secondary-hover-color);
+            border-color: var(--secondary-hover-color);
+        }
+
+        &:focus:active {
+            background: var(--secondary-color);
+            border-color: var(--secondary-color);
+        }
+    }
+
+    &--primary-outline {
+        color: var(--secondary-color);
+        background: transparent;
+        border: 2px solid var(--secondary-color);
+
+        &:hover {
+            background: var(--secondary-hover-color);
+            border-color: var(--secondary-hover-color);
+            color: var(--lightest-color);
+        }
+
+        &:focus:active {
+            background: var(--primary-color);
+            border-color: var(--primary-color);
+            color: var(--lightest-color);
+        }
+    }
+
+    &--sm {
+        padding: 6px 12px;
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    &--auto {
+        width: auto;
+    }
+}
+
+.form-control {
+    padding: 6px 0;
+    font-size: 14px;
+    line-height: 20px;
+    width: 100%;
+    border: 0;
+    border-bottom: 2px solid var(--secondary-color);
+    background: none;
+    color: var(--lightest-color);
+    outline: none;
+    font-family: var(--font-primary);
+
+    &:disabled {
+        opacity: .5;
+        cursor: not-allowed;
+    }
+
+    &::placeholder {
+        color: var(--primary-color);
+    }
+
+    &:focus,
+    &:focus-visible {
+        border-bottom: 2px solid var(--primary-color);
+    }
+
+    &:-webkit-autofill,
+    &:-webkit-autofill:focus {
+        transition: background-color 600000s 0s, color 600000s 0s;
+    }
+
+    &--error {
+        border-image-slice: 1;
+        border-image-source: linear-gradient(to right, var(--red-color), var(--secondary-color));
+    }
+}
+
+.mt-12 {
+    margin-top: 12px;
+}
+
+.form__field {
+    margin-bottom: 18px;
+    position: relative;
+
+    &--error {
+        color: var(--red-color);
+        font-size: 11px;
+        line-height: 14px;
+        font-weight: 900;
+        position: absolute;
+        bottom: -2px;
+        display: flex;
+        align-items: flex-end;
+        transform: translateY(100%);
+    }
+}
+
+.link-primary {
+    color: var(--secondary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    border: 2px solid var(--secondary-color);
+    padding: 8px 12px;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 20px;
+
+    &:hover {
+        background: var(--secondary-hover-color);
+        border-color: var(--secondary-hover-color);
+        color: var(--lightest-color);
+    }
+
+    &:focus:active {
+        background: var(--primary-color);
+        border-color: var(--primary-color);
+        color: var(--lightest-color);
+    }
 }
