--- a/src/app/components/helper/dropdown/dropdown.component.less
+++ b/src/app/components/helper/dropdown/dropdown.component.less
@@ -1,9 +1,10 @@
-.dropdown {
-    font-size: 14px;
-    line-height: 20px;
+:host {
     display: inline-block;
+    margin-bottom: 12px;
+    width: 100%;
+}
+.dropdown {
     position: relative;
-    min-width: 130px;
 
     &__value {
         display: flex;
