--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,1 +1,1 @@
-<app-sign-form [form]="form" [reverse]='true' (onSubmitEvent)="onSubmit()"></app-sign-form>
+<app-sign-form [form]="form" (onSubmitEvent)="onSubmit()"></app-sign-form>
