--- a/src/app/components/root/root.component.less
+++ b/src/app/components/root/root.component.less
@@ -22,6 +22,7 @@ nav {
     ul {
         display: flex;
         justify-content: flex-end;
+        align-items: center;
         list-style: none;
         padding: 0;
         margin: 0;
@@ -32,11 +33,10 @@ nav {
     color: var(--white-color);
     text-decoration: none;
     display: inline-block;
-    font-size: 14px;
-    line-height: 16px;
+    font: var(--font-text-lg);
     padding: 4px 12px;
 
-    &:hover {
+    &:hover, &.active {
         color: var(--accent-color);
     }
 }
