--- a/src/app/components/helper/sign-form/sign-form.component.less
+++ b/src/app/components/helper/sign-form/sign-form.component.less
@@ -1,14 +1,15 @@
 :host {
   display: flex;
   flex-direction: column;
-  max-width: 300px;
+  max-width: 340px;
   margin: auto;
   width: 100%;
   position: relative;
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0 0 3px 1px var(--primary-color);
-  padding: 24px;
+  padding: 24px 32px;
+  background: var(--primary-dark-color)
 }
 
 .form {
