--- a/src/app/components/root/root.component.html
+++ b/src/app/components/root/root.component.html
@@ -7,7 +7,7 @@
                 <!-- <li><a routerLink="/profile" class="nav-link"> {{user}} profile</a></li> -->
                 <li>
                     <a href="/" (click)="logout()" class="nav-link">
-                        <app-svg-icon icon="logout"></app-svg-icon>
+                        <app-svg-icon icon="logout" [size]="24"></app-svg-icon>
                     </a>
                 </li>
             </ng-container>
