--- a/src/styles.less
+++ b/src/styles.less
@@ -6,7 +6,9 @@
 @darkest-color: #2F4858;
 @red: #DA0037;
 @accent: #F69333;
+@accent: #9A7BA0;
 @awesome-gray: #9ABDD1;
+@primary-dark-color: #004256;
 //9BBED2 ligth btn outline  7AB4D2
 //#9A7BA0 fanny
 html {
@@ -22,6 +24,7 @@ html {
     --lightest-color: @lightest-color;
     --light-color: @light-color;
     --primary-color: @primary-color;
+    --primary-dark-color: @primary-dark-color;
     --secondary-color: @secondary-color;
     --secondary-hover-color: @thirdary-color;
     --darkest-color: @darkest-color;
