--- a/src/app/components/helper/modal/modal.component.html
+++ b/src/app/components/helper/modal/modal.component.html
@@ -1,11 +1,9 @@
-<ng-container *ngIf="display$ | async as display">
-    <section [class.open]="display !== 'close'" (click)="handleClick($event)">
-        <div>
-            <button class="close" type="button" (click)="close()">
-                <app-svg-icon icon="cross" [size]="24"></app-svg-icon>
-            </button>
-            <h3>{{modalTitle}}</h3>
-            <ng-content></ng-content>
-        </div>
-    </section>
-</ng-container>
+<section class="overlay" (click)="handleClick($event)">
+    <div class="modal">
+        <button class="modal__close" type="button" (click)="close()">
+            <app-svg-icon icon="cross" [size]="24"></app-svg-icon>
+        </button>
+        <h3 class="modal__title">{{title}}</h3>
+        <ng-container [ngTemplateOutlet]="currentTemplate"></ng-container>
+    </div>
+</section>
