--- a/src/app/components/user-list/user-list.component.less
+++ b/src/app/components/user-list/user-list.component.less
@@ -5,15 +5,30 @@
 table {
     border-collapse: collapse;
     margin-bottom: 20px;
+    border: 1px solid var(--primary-dark-color);
+
+    width: 100%;
 
     thead {
         th {
             font-size: 10px;
             text-align: left;
             padding: 8px;
-            color: var(--secondary-color);
             text-transform: uppercase;
-            border-bottom: 1px solid;
+            background: var(--primary-dark-color);
+
+            .sorting {
+                display: inline-block;
+                vertical-align: inherit;
+                margin-left: 6px;
+                cursor: pointer;
+
+                span {
+                    &:hover {
+                        color: var(--accent-color);
+                    }
+                }
+            }
         }
     }
 
