--- a/src/app/components/user-list/user-list.component.less
+++ b/src/app/components/user-list/user-list.component.less
@@ -61,3 +61,23 @@ table {
         background: var(--accent-color-70);
     }
 }
+
+.search-field {
+    .form-control {
+        padding-left: 28px;
+    }
+    &__filter-btn {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 36px;
+        padding: 4px 8px;
+    }
+
+    &__search-icon {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translateY(50%);
+    }
+}
